@@ -61,6 +61,20 @@ name|bcel
 operator|.
 name|classfile
 operator|.
+name|ConstantCP
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|bcel
+operator|.
+name|classfile
+operator|.
 name|ConstantPool
 import|;
 end_import
@@ -283,6 +297,91 @@ operator|.
 name|getReturnTypeSize
 argument_list|(
 name|signature
+argument_list|)
+return|;
+block|}
+comment|/**      * This overrides the deprecated version as we know here that the referenced class      * cannot be an array unless something has gone badly wrong.      * may legally be an array.      * *      * @return name of the referenced class/interface      * @throws IllegalArgumentException if the referenced class is an array (this should not happen)      */
+annotation|@
+name|Override
+specifier|public
+name|String
+name|getClassName
+parameter_list|(
+specifier|final
+name|ConstantPoolGen
+name|cpg
+parameter_list|)
+block|{
+specifier|final
+name|ConstantPool
+name|cp
+init|=
+name|cpg
+operator|.
+name|getConstantPool
+argument_list|()
+decl_stmt|;
+specifier|final
+name|ConstantCP
+name|cmr
+init|=
+operator|(
+name|ConstantCP
+operator|)
+name|cp
+operator|.
+name|getConstant
+argument_list|(
+name|super
+operator|.
+name|getIndex
+argument_list|()
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|className
+init|=
+name|cp
+operator|.
+name|getConstantString
+argument_list|(
+name|cmr
+operator|.
+name|getClassIndex
+argument_list|()
+argument_list|,
+name|Const
+operator|.
+name|CONSTANT_Class
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|className
+operator|.
+name|startsWith
+argument_list|(
+literal|"["
+argument_list|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"Cannot be used on an array type"
+argument_list|)
+throw|;
+block|}
+return|return
+name|className
+operator|.
+name|replace
+argument_list|(
+literal|'/'
+argument_list|,
+literal|'.'
 argument_list|)
 return|;
 block|}
